<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    android:background="@color/fragementBg"
    tools:context="in.droidoselabs.missionindiafit.fragment.BodyTypeFragment">

    <TextView
        style="@style/BasicDetailsTextView"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/choose_your_bodytype"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/desctiption"
        style="@style/BasicDetailsTextView"
        android:layout_marginTop="@dimen/spacing_xl"
        android:padding="@dimen/spacing_small"
        android:text="@string/this_will_help_us_choose_right_schedule"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        style="@style/MatchWrap"
        android:layout_below="@+id/desctiption"
        android:layout_margin="@dimen/spacing_medium"
        android:padding="@dimen/spacing_medium"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/spacing_tiny"
        app:cardElevation="@dimen/spacing_tiny">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/huge_size"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_medium">

            <ImageView
                android:id="@+id/ivBodyOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33" />

            <ImageView
                android:id="@+id/ivBodyTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33" />

            <ImageView
                android:id="@+id/ivBodyThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvBodyType"
        style="@style/BasicDetailsTextView"
        android:layout_below="@id/card"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/ectomorph"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        android:textStyle="bold" />
</RelativeLayout>
